--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"target": "ES2022",
+		"target": "ES2022"
 	},
-	"include": ["src"],
+	"include": ["src"]
 }
