--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 	"scripts": {
 		"build": "tsup",
 		"format": "prettier .",
-		"lint": "eslint . .*js --max-warnings 0",
+		"lint": "eslint . --max-warnings 0",
 		"lint:knip": "knip",
 		"lint:md": "markdownlint \"**/*.md\" \".github/**/*.md\" --rules sentences-per-line",
 		"lint:packages": "pnpm dedupe --check",
@@ -36,50 +36,60 @@
 		"*": "prettier --ignore-unknown --write"
 	},
 	"dependencies": {
-		"@trpc/server": "11.0.0-next-beta.274",
-		"uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.43.0"
+		"@trpc/server": "11.0.0-rc.342",
+		"uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.44.0"
 	},
 	"devDependencies": {
+		"@eslint-community/eslint-plugin-eslint-comments": "^4.3.0",
+		"@eslint/js": "^9.2.0",
+		"@octokit/request-error": "^6.1.1",
 		"@release-it/conventional-changelog": "^8.0.1",
-		"@trpc/client": "11.0.0-next-beta.274",
-		"@types/eslint": "^8.56.6",
-		"@typescript-eslint/eslint-plugin": "^7.4.0",
-		"@typescript-eslint/parser": "^7.4.0",
+		"@trpc/client": "11.0.0-rc.342",
+		"@types/eslint": "^8.56.10",
+		"@types/eslint-plugin-markdown": "^2.0.2",
+		"@types/git-url-parse": "^9.0.3",
+		"@types/js-yaml": "^4.0.9",
+		"@types/node": "^20.12.7",
+		"@types/parse-author": "^2.0.3",
+		"@typescript-eslint/eslint-plugin": "^7.13.0",
+		"@typescript-eslint/parser": "^7.13.0",
 		"@vitest/coverage-v8": "^1.4.0",
+		"c8": "^10.0.0",
 		"console-fail-test": "^0.2.3",
-		"cspell": "^8.6.1",
-		"eslint": "^8.57.0",
-		"eslint-plugin-deprecation": "^2.0.0",
-		"eslint-plugin-eslint-comments": "^3.2.0",
-		"eslint-plugin-jsdoc": "^48.2.2",
-		"eslint-plugin-jsonc": "^2.14.1",
-		"eslint-plugin-markdown": "^4.0.1",
-		"eslint-plugin-n": "^16.6.2",
-		"eslint-plugin-package-json": "^0.12.1",
-		"eslint-plugin-perfectionist": "^2.7.0",
-		"eslint-plugin-regexp": "^2.4.0",
-		"eslint-plugin-vitest": "^0.4.1",
-		"eslint-plugin-yml": "^1.13.2",
+		"cspell": "^8.8.4",
+		"eslint": "^9.2.0",
+		"eslint-plugin-jsdoc": "^48.2.3",
+		"eslint-plugin-jsonc": "^2.15.0",
+		"eslint-plugin-markdown": "^5.0.0",
+		"eslint-plugin-n": "^17.3.1",
+		"eslint-plugin-package-json": "^0.14.0",
+		"eslint-plugin-perfectionist": "^2.9.0",
+		"eslint-plugin-regexp": "^2.5.0",
+		"eslint-plugin-vitest": "^0.5.3",
+		"eslint-plugin-yml": "^1.14.0",
+		"globby": "^14.0.0",
 		"husky": "^9.0.11",
 		"jsonc-eslint-parser": "^2.4.0",
-		"knip": "^5.7.0",
-		"lint-staged": "^15.2.2",
+		"knip": "^5.19.0",
+		"lint-staged": "^15.2.7",
 		"markdownlint": "^0.34.0",
-		"markdownlint-cli": "^0.39.0",
-		"prettier": "^3.2.5",
+		"markdownlint-cli": "^0.41.0",
+		"prettier": "^3.3.2",
 		"prettier-plugin-curly": "^0.2.1",
-		"prettier-plugin-packagejson": "^2.4.14",
-		"release-it": "^17.1.1",
+		"prettier-plugin-packagejson": "^2.5.0",
+		"prettier-plugin-sh": "^0.14.0",
+		"release-it": "^17.3.0",
 		"sentences-per-line": "^0.2.1",
 		"should-semantic-release": "^0.3.0",
-		"tsup": "^8.0.2",
-		"typescript": "^5.4.3",
+		"tsup": "^8.1.0",
+		"tsx": "^4.9.0",
+		"typescript": "^5.4.5",
+		"typescript-eslint": "^7.7.0",
 		"unws": "^0.2.4",
-		"vitest": "^1.4.0",
-		"yaml-eslint-parser": "^1.2.2",
-		"zod": "^3.22.4"
+		"vitest": "^1.6.0",
+		"zod": "^3.23.8"
 	},
-	"packageManager": "pnpm@8.15.5",
+	"packageManager": "pnpm@9.3.0",
 	"engines": {
 		"node": ">=18"
 	},
