--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"@typescript-eslint/eslint-plugin": "^8.1.0",
 		"@typescript-eslint/parser": "^8.1.0",
 		"@vitest/coverage-v8": "^2.0.5",
+		"@vitest/eslint-plugin": "^1.0.1",
 		"c8": "^10.0.0",
 		"console-fail-test": "^0.4.4",
 		"cspell": "^8.13.3",
@@ -65,7 +66,6 @@
 		"eslint-plugin-package-json": "^0.15.2",
 		"eslint-plugin-perfectionist": "^3.1.3",
 		"eslint-plugin-regexp": "^2.5.0",
-		"eslint-plugin-vitest": "^0.5.3",
 		"eslint-plugin-yml": "^1.14.0",
 		"globby": "^14.0.2",
 		"husky": "^9.1.4",
